# privex-starter

./: .env.example  .gitignore  Makefile  README.md  install.sh  pyproject.toml  requirements.txt
examples/: connect.py  get_positions.py  live_trading_smoke.py  place_order.py
privex/: __init__.py  cli.py  client.py  config.py
